# mycardanoutil

./: .gitignore  CHANGELOG.md  README.md  mycardanoutil.cabal
app/: Main.hs
config/: EXAMPLEblockfrosttoken  hoskyassetnamehex.config  hoskypolicyid.config  walletaddresses.config
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: BFCalls.hs  ConfigManager.hs  Interface.hs
