cabal-version:      2.4
name:               mycardanoutil
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable mycardanoutil
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                      , blockfrost-client
                      , ansi-terminal
                      , mtl
                      , text
                      , aeson
    other-modules:    Interface
                      , ConfigManager
                      , BFCalls
    hs-source-dirs:   app , src , config
    default-language: Haskell2010